--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,6 @@ p {
   font-size: 18px;
 }
 
-li {
-  list-style: none;
-}
-
 .divisao {
   width: 90%;
   margin: 0 auto;
@@ -71,6 +67,7 @@ header {
 }
 
 .container {
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
@@ -88,6 +85,7 @@ header {
 }
 
 .home {
+  width: 100%;
   display: flex;
   align-items: center;
 }
@@ -106,6 +104,7 @@ header {
 }
 
 .sobreMim {
+  width: 100%;
   background-image: url("../img/fundos/fundo2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -126,6 +125,7 @@ header {
 }
 
 .projetos {
+  width: 100%;
   display: flex;
   justify-content: center;
   padding: 10px;
@@ -134,6 +134,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80%;
   padding: 20px;
   gap: 20px;
 }
@@ -144,13 +145,13 @@ header {
   flex-wrap: wrap;
   gap: 30px;
 }
-.projetos .container-projetos .lista li {
+.projetos .container-projetos .lista .item-lista {
   width: 350px;
   height: 400px;
   background-color: #fffd84;
   border-radius: 20px;
 }
-.projetos .container-projetos .lista li a {
+.projetos .container-projetos .lista .item-lista a {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -160,18 +161,18 @@ header {
   text-decoration: underline;
   transition: 0.3s;
 }
-.projetos .container-projetos .lista li a:hover {
+.projetos .container-projetos .lista .item-lista a:hover {
   color: #000;
 }
-.projetos .container-projetos .lista li a div {
+.projetos .container-projetos .lista .item-lista a div {
   margin-top: -20px;
 }
-.projetos .container-projetos .lista li a div .img-projeto {
+.projetos .container-projetos .lista .item-lista a div .img-projeto {
   width: 300px;
   height: 200px;
   border-radius: 10px;
 }
-.projetos .container-projetos .lista li .texto-projetos {
+.projetos .container-projetos .lista .item-lista .texto-projetos {
   background-color: #d0d0d0;
   height: 120px;
   width: 320px;
@@ -185,6 +186,7 @@ header {
 }
 
 .container-skills {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -227,6 +229,8 @@ header {
 }
 
 .container-contatos {
+  width: 100%;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -240,12 +244,14 @@ header {
 .container-contatos .text-email a {
   color: #d0d0d0;
   transition: 0.4s;
+  font-size: 30px;
 }
 .container-contatos .text-email a:hover {
   color: #353535;
 }
 
 .footer {
+  width: 100%;
   background-color: #0e1010;
 }
 .footer .container-footer {
@@ -271,6 +277,9 @@ header {
 }
 
 @media (max-width: 1056px) {
+  .home {
+    min-height: 80vh;
+  }
   .home .container-home {
     margin-right: 20px;
   }
@@ -288,6 +297,9 @@ header {
   }
 }
 @media (max-width: 855px) {
+  .home {
+    min-height: 70vh;
+  }
   .home .img-perfil {
     width: 450px;
   }
@@ -320,6 +332,10 @@ header {
   }
   .home .container-home p {
     font-size: 15px;
+  }
+
+  .container-contatos .text-email a {
+    font-size: 25px;
   }
 }
 @media (max-width: 632px) {
@@ -359,27 +375,31 @@ header {
     justify-content: center;
     gap: 20px;
   }
-  .projetos .container-projetos .lista li {
+  .projetos .container-projetos .lista .item-lista {
     width: 250px;
     height: 300px;
   }
-  .projetos .container-projetos .lista li a h4 {
+  .projetos .container-projetos .lista .item-lista a h4 {
     font-size: 17px;
   }
-  .projetos .container-projetos .lista li a div {
+  .projetos .container-projetos .lista .item-lista a div {
     margin-top: -20px;
   }
-  .projetos .container-projetos .lista li a div .img-projeto {
+  .projetos .container-projetos .lista .item-lista a div .img-projeto {
     width: 200px;
     height: 100px;
   }
-  .projetos .container-projetos .lista li .texto-projetos {
+  .projetos .container-projetos .lista .item-lista .texto-projetos {
     background-color: #d0d0d0;
     height: 120px;
     width: 220px;
     margin: 0 auto;
     font-size: 11px;
     margin-top: -10px;
+  }
+
+  .container-contatos .text-email a {
+    font-size: 20px;
   }
 
   .footer .container-footer .endereco-footer .img-logo {
@@ -416,6 +436,7 @@ header {
   }
 
   .home {
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -472,6 +493,9 @@ header {
   .container-contatos .redes-sociais {
     gap: 30px;
   }
+  .container-contatos .text-email a {
+    font-size: 15px;
+  }
 
   .footer .container-footer .endereco-footer .img-logo {
     width: 40px;
@@ -524,6 +548,18 @@ header {
   .container-contatos .redes-sociais {
     gap: 20px;
   }
+  .container-contatos .redes-sociais a .github {
+    font-size: 20px;
+  }
+  .container-contatos .redes-sociais a .linkedin {
+    font-size: 20px;
+  }
+  .container-contatos .redes-sociais a .whatsapp {
+    font-size: 20px;
+  }
+  .container-contatos .text-email a {
+    font-size: 12px;
+  }
 
   .footer .container-footer .endereco-footer .img-logo {
     width: 30px;
@@ -539,7 +575,15 @@ header {
   }
 }
 @media (max-width: 340px) {
+  #header {
+    width: 100%;
+  }
+  #header nav .container .imagem-header a .img-logo {
+    width: 40px;
+  }
+
   .home {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -583,19 +627,20 @@ header {
   }
   .projetos .container-projetos .lista {
     gap: 15px;
+    padding-left: 0;
   }
-  .projetos .container-projetos .lista li {
+  .projetos .container-projetos .lista .item-lista {
     width: 200px;
     height: 300px;
   }
-  .projetos .container-projetos .lista li a h4 {
+  .projetos .container-projetos .lista .item-lista a h4 {
     font-size: 13px;
   }
-  .projetos .container-projetos .lista li a div .img-projeto {
+  .projetos .container-projetos .lista .item-lista a div .img-projeto {
     width: 150px;
     height: 100px;
   }
-  .projetos .container-projetos .lista li .texto-projetos {
+  .projetos .container-projetos .lista .item-lista .texto-projetos {
     background-color: #d0d0d0;
     height: 120px;
     width: 180px;
